--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Yishak Abrham <yishak.ab1216@gmail.com>
+Girma Tarekegn <girmatarekegn.gi@gmail.com>
